@@ -725,6 +725,8 @@ int main(
 
       case 'S':
 
+        /* FORMAT: ??? */
+
         if (get_port(
               optarg, 
               &pbs_scheduler_port,
@@ -1241,18 +1243,20 @@ static int get_port(
     {
     name = parse_servername(arg,port);
 
-    if (name != NULL) 
+    if (name == NULL) 
       {
-      *addr = get_hostaddr(name);
-      } 
-    else 
-      {
+      /* FAILURE */
+
       return(-1);
       }
+
+    *addr = get_hostaddr(name);
     }
 
   if ((*port <= 0) || (*addr == 0))
     {
+    /* FAILURE */
+
     return(-1);
     }
 
