@@ -5,6 +5,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - fix 2.1.4 regression with spool file group owner on freebsd
   b - don't exit if mlockall sets errno ENOSYS
   f - qalter -v variable_list
+  f - MOMSLEEPTIME env delays pbs_mom initialization
+  e - minor log message fixups
 
 2.1.6
   b - freebsd5 build fix
